<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/relativeLayout"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="3dp"
                    app:cardUseCompatPadding="true"
                    android:onClick="onOwnedClick">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textViewOwnedAmount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:paddingRight="10dp"
                            android:maxLines="1"
                            android:text="10"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/owned_apartments"
                            android:textSize="30sp" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="3dp"
                    app:cardUseCompatPadding="true"
                    android:onClick="onRentedClick">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rented_apartments"
                            android:textSize="30sp" />

                        <TextView
                            android:id="@+id/textViewRentedAmount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:paddingRight="10dp"
                            android:gravity="center"
                            android:maxLines="1"
                            android:text="2"
                            android:textSize="14sp" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="3dp"
                    app:cardUseCompatPadding="true"
                    android:onClick="onSearchClick">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/search_apartment"
                            android:textSize="30sp" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:ignore="MissingConstraints">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="3dp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textViewHello"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:maxLines="2"
                            android:text="Hello \n USERNAME"
                            android:textSize="35sp" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>